[package]
authors = [
    "Junseok Lee <lee.junseok@berkeley.edu>",
    "hizani <78748751+hizani@users.noreply.github.com>",
]
name = "kademlia"
version = "0.0.1"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
hashes = "0.1"
const-hex = "1"
log = "0.4"
env_logger = "0.11"
thiserror = "2"

[features]
default = []
simd-unstable = []
