[package]
authors = [
    "Junseok Lee <lee.junseok@berkeley.edu>",
    "hizani <78748751+hizani@users.noreply.github.com>",
]
name = "kademlia"
version = "0.0.1"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"                                  # TODO: use a homebrewed encrypted binary protocol instead of json. 
rand = "0.8"
hashes = "0.1"
const-hex = "1.14"
thiserror = "2.0"
tokio = { version = "1.42", features = ["full"] }
async-channel = "2.3"
tracing = "0.1"

[dev-dependencies]
tracing-subscriber = "0.3"

[features]
simd-unstable = [] # this feature reduces calculation of distance between keys from 32 iterations to 1.

[[example]]
name = "node"
